# captain

./: Cargo.toml  README.md  flake.nix  shell.nix
.github/workflows/: cli.yml
src/: command.rs  config.rs  macros.rs  main.rs  workspace.rs
