[package]
name = "captain"
version = "0.1.0-alpha.0"
description = "Program management for Solana and Anchor."
homepage = "https://captain.so"
repository = "https://github.com/saber-hq/captain"
authors = ["Ian Macalinao <ian@saber.so>"]
license = "Apache-2.0"
edition = "2018"

[dependencies]
anyhow = "1.0.32"
clap = "3.0.0-beta.2"
semver = "1.0.3"
strum = "0.21.0"
strum_macros = "0.21"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5.8"
shellexpand = "2.1.0"
solana-sdk = "1.7.1"
cargo_toml = "0.9.2"
serde_with = { version = "1.9.3" }
colored = "2"
rand = "0.8.3"
tempfile = "3.2.0"

[[bin]]
name = "captain"
path = "src/main.rs"
