[package]
name = "captain"
version = "0.1.0-alpha.0"
description = "Program management for Solana and Anchor."
homepage = "https://captain.so"
repository = "https://github.com/saber-hq/captain"
authors = ["Ian Macalinao <ian@saber.so>"]
license = "Apache-2.0"
edition = "2018"

[dependencies]
anyhow = "1.0.42"
cargo_toml = "0.9.2"
clap = "3.0.6"
colored = "2"
semver = "1.0.4"
serde = { version = "1.0", features = ["derive"] }
serde_with = { version = "1.9.4" }
shellexpand = "2.1.0"
solana-sdk = "1.7.10"
strum = "0.21.0"
strum_macros = "0.21"
tempfile = "3.2.0"
toml = "0.5.8"

[[bin]]
name = "captain"
path = "src/main.rs"
